# probare

./: .gitignore  Documentation_Probare_MVP.docx  FEUILLE_DE_ROUTE.md  Note_Planification_IYYIU_2026.docx  Note_Planification_NNNN_2026.docx  Note_Planification_TEST_2026.docx  Probare_Cahier_des_charges.docx  Probare_Presentation_Cabinets.docx  Probare_Reference_Audit.docx  cdc_text.txt  cdc_text2.txt  claude-code-brief.md  generer_doc.py  generer_jeux_test.py  lancer_probare.ps1
probare/apps/engine/: pyproject.toml  setup.cfg
probare/apps/engine/probare_engine/: __init__.py  ajustements.py  main.py  normes.py
probare/apps/engine/probare_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
probare/apps/engine/probare_engine/anonymization/: __init__.py  anonymizer.py
probare/apps/engine/probare_engine/api/: routes.py
probare/apps/engine/probare_engine/controls/: __init__.py  circularisation.py  document_types.py  engine.py  journal_entries.py  opinion.py  peripherie.py  qci.py  registry.py  sondages.py
probare/apps/engine/probare_engine/ingestion/: __init__.py  dossier_brut.py  excel_csv.py
probare/apps/engine/probare_engine/llm/: __init__.py  claude.py  (+1 more)
probare/apps/engine/tests/: stub_llm_server.py  test_anonymization.py  test_circularisation_sondages.py  test_controls.py  test_d1_journal_entries.py  test_export_detail.py  test_m1_ajustements.py  test_m2_m3_seuils_peripherie.py  test_m4_couverture.py  test_nep450_process.py  test_new_features.py  test_normes.py  test_note_planification_regression.py  test_opinion.py  test_rapport_audit.py
(+123 files in other folders)
